--- a/images/main.css
+++ b/images/main.css
@@ -50,7 +50,11 @@ header nav ul li a:focus {
 
 main ul {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+}
+
+main ul li {
+  list-style: none;
 }
 
 footer {
