--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,12 @@ nav a:hover {
   grid-column: 1 / -1;
 }
 
+.info {
+  margin: 0 2rem;
+}
+
 h2 {
-  font-size: 2rem;
+  font-size: 2.rem;
   margin: 0;
 }
 
@@ -71,4 +75,34 @@ p {
 }
 .money-tree {
   background-color: pink;
+}
+
+.para-1 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.para-2 {
+  font-size: .75rem;
+  margin-bottom: .25rem;
+}
+
+.para-3 {
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
+span {
+  display: flex;
+  justify-content: center;
+}
+
+span a {
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
+  border: 1px solid #003300;
+  background-color: #003300;
+  padding: .3em .6em;
+  border-radius: .3em;
 }
