--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ nav a:hover {
 }
 
 h2 {
-  font-size: 2.rem;
+  font-size: 2.5rem;
   margin: 0;
 }
 
@@ -74,7 +74,7 @@ p {
   margin: 0;
 }
 .money-tree {
-  background-color: pink;
+  /* background-color: pink; */
 }
 
 .para-1 {
@@ -83,8 +83,8 @@ p {
 }
 
 .para-2 {
-  font-size: .75rem;
-  margin-bottom: .25rem;
+  font-size: 1rem;
+  margin-bottom: .1rem;
 }
 
 .para-3 {
@@ -95,6 +95,7 @@ p {
 span {
   display: flex;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 span a {
@@ -105,4 +106,22 @@ span a {
   background-color: #003300;
   padding: .3em .6em;
   border-radius: .3em;
+}
+
+span a:hover {
+  color: black;
+  background-color: #8dd579;
+}
+
+.care {
+  background-color: pink;
+}
+
+.care dt {
+   float: left;
+   clear: left;
+}
+
+dt::after {
+   content: " ";
 }
