--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ nav a:hover {
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin: 0;
 }
 
@@ -133,4 +133,29 @@ blockquote {
 
 blockquote cite {
   font-size: .8rem;
+}
+
+.also-browsed {
+  background-color: pink;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  list-style: none;
+  grid-column-gap: 2rem;
+  grid-row-gap: 1rem;
+  padding-left: 0;
+}
+
+.also-browsed li img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.also-browsed a {
+  text-decoration: none;
+  color: black;
+}
+
+.also-browsed a:hover {
+  text-decoration: underline;
 }
