--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html {
 .wrapper {
   display: grid;
   grid-template-columns: 3fr auto;
-  margin: 0 2rem;
+  padding: 0 1rem;
   /* background-color: pink; */
   align-items: center;
 }
@@ -43,7 +43,7 @@ nav a:hover {
 
 article {
   display: grid;
-  padding-left: 1rem;
+  padding: 0 1rem;
 }
 
 .picture ul {
@@ -65,12 +65,8 @@ article {
   grid-column: 1 / -1;
 }
 
-/* .info {
-  margin: 0 2rem;
-} */
-
 h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 0;
 }
 
@@ -89,7 +85,7 @@ p {
 }
 
 .para-3 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 1rem 0;
 }
 
@@ -102,7 +98,7 @@ span {
 span a {
   text-decoration: none;
   color: white;
-  font-size: 2rem;
+  font-size: 1.5rem;
   border: 1px solid #003300;
   background-color: #003300;
   padding: .3em .6em;
@@ -142,7 +138,11 @@ blockquote cite {
 }
 
 .browsed {
-  padding: 0 2rem;
+  padding: 0 1rem;
+}
+
+.browsed h2 {
+  font-size: 1rem;
 }
 
 .also-browsed {
@@ -152,7 +152,8 @@ blockquote cite {
   list-style: none;
   grid-column-gap: 2rem;
   grid-row-gap: 1rem;
-  padding-left: 0;
+  padding: 0;
+  margin: .5rem 0 2rem 0;
 }
 
 .also-browsed li img{
@@ -171,24 +172,26 @@ blockquote cite {
 }
 
 @media only screen and (min-width: 768px){
-article {
-   grid-template-columns: 1fr 1fr;
-   grid-column-gap: 1rem;
- }
-
- /* .info {
-   grid-row: 3 / -2;
-   grid-column: 2 /-1
- } */
- .para-1 {
-   font-size: 1rem;
- }
- .also-browsed {
-   grid-template-columns: 1fr 1fr 1fr 1fr;
+  header img {
+    width: 70%;
+  }
+  nav ul {
+    font-size: 1.5rem;
+  }
+  article {
+     grid-template-columns: 1fr 1fr;
+     grid-column-gap: 1rem;
+   }
+   .para-1 {
+     font-size: 1rem;
+   }
+   .also-browsed {
+     grid-template-columns: 1fr 1fr 1fr 1fr;
+   }
 }
 
-/* @media only screen and (min-width: 1280px){
+@media only screen and (min-width: 1280px){
   .also-browsed {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: red;
   }
-} */
+}
