--- a/css/main.css
+++ b/css/main.css
@@ -51,16 +51,17 @@ article {
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  /* background-color: red; */
   gap: 1rem;
   list-style: none;
   padding-bottom: 1rem;
 }
 
 .picture li img{
-  display: block;
+  /* display: block;
   max-width: 100%;
-  height: auto;
+  height: auto; */
+  width: 100%;
+  height: 100%;
 }
 
 .picture li:first-child {
@@ -159,7 +160,7 @@ blockquote cite {
   display: grid;
   grid-template-columns: 1fr 1fr;
   list-style: none;
-  grid-column-gap: 2rem;
+  grid-column-gap: 1rem;
   grid-row-gap: 1rem;
   padding: 0;
   margin: .5rem 0 2rem 0;
@@ -205,11 +206,15 @@ blockquote cite {
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
+
   .picture li:first-child {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
     align-self: center;
+    height: 16vw;
+    object-fit: cover;
     }
+
   .picture li:not(:first-child) {
     max-width: 94%;
     /* not too sure about the right way to make large image take up all of grid container */
