--- a/css/main.css
+++ b/css/main.css
@@ -160,17 +160,17 @@ blockquote cite {
   display: grid;
   grid-template-columns: 1fr 1fr;
   list-style: none;
-  grid-column-gap: 1rem;
+  grid-column-gap: .5rem;
   grid-row-gap: 1rem;
   padding: 0;
   margin: .5rem 0 2rem 0;
 }
 
-.browsed ul li img{
+/* .browsed ul li img{
   display: block;
   max-width: 100%;
   height: auto;
-}
+} */
 
 .browsed ul a {
   text-decoration: none;
