--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ blockquote cite {
   display: grid;
   grid-template-columns: 1fr 1fr;
   list-style: none;
-  grid-column-gap: .5rem;
+  grid-column-gap: 1rem;
   grid-row-gap: 1rem;
   padding: 0;
   margin: .5rem 0 2rem 0;
@@ -211,8 +211,6 @@ blockquote cite {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
     align-self: center;
-    height: 16vw;
-    object-fit: cover;
     }
 
   .picture li:not(:first-child) {
